# GeedVBACurlBridge

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: WSC_Bridge.bas  WSC_Client.cls  WSC_IEventSink.cls  WSC_ISender.cls  WSC_Test.bas  WSC_TestSink.cls  libcurl_vba_bridge.c
